# kernell-os-sdk

./: .gitignore  Dockerfile  Dockerfile.agent-base  README.md  SECURITY.md  bandit_report.json  demo_economic_agent.py  demo_m2m_delegation.py  demo_marketplace_agent.py  demo_orchestrator.py  demo_phase2_matching.py  demo_phase3_infrastructure.py  demo_phase4_sovereignty.py  dump.rdb  fuzz_economic_engine.py  kernell_provider.py  llms.txt  moltbook_backend.py  nsjail.cfg  pre-commit-security.sh  pyproject.toml  seccomp_kernell.policy  sim_escrow_v2.py  sim_sybil_attack.py  system_posture_generator.py  test_docker.py  test_firewall_v2.py  test_rate_limiting.py  test_security_fixes.py  test_ssrf_imports.py  test_value_flow.py
.github/workflows/: benchmark.yml  publish.yml  sdk-client-container.yml  security.yml
.kernell/: index.json  task_history.jsonl
benchmarks/: badge.json  golden_tasks.json  leaderboard.json
benchmarks/runs/: 2026-04-28T20-09-01Z.jsonl  20260428_173912.jsonl  20260428_174736.jsonl  20260428_175228.jsonl
deploy/: Dockerfile.sdk-client  chaos_engine.py  client_smoke.py  docker-compose.hybrid.yml  docker-compose.redis-cluster.yml  docker-compose.sdk-client.yml  redis-production.conf
kap_escrow/: __init__.py  a2a_compat.py  ap2_compat.py  api.py  engine.py  escrow_v2.py  kms.py  merkle.py  signing.py  taint.py  verify_binary.py  wal.py
kernell_os_sdk/: __init__.py  agent.py  agent_perception.py  agent_persistence.py  agent_reliability.py  agent_runtime.py  agent_world_model.py  browser.py  budget.py  cli.py  cluster.py  config.py  constants.py  dashboard.py  economic_agent.py  economic_engine.py  execution_gate.py  execution_security.py  formal_verifier.py  gui.py  identity.py  interaction_router.py  launcher.py  log_redactor.py  marketplace_agent.py  memory.py  old_cli.py  orchestrator.py  os_controller.py  policy_engine.py  resilience.py  risk_engine.py  sandbox.py  seccomp_agent.json  telemetry.py  tracing.py  wallet.py
kernell_os_sdk/adapters/: __init__.py  gui_adapter.py  interpreter_adapter.py  m2m_adapter.py  python_runtime.py  secure_adapter.py
kernell_os_sdk/cli/: __main__.py  dashboard.py  demo.py  doctor.py  upgrade.py
kernell_os_sdk/cluster/: __init__.py  bounty.py  compute_pool.py
kernell_os_sdk/cognitive/: config_loader.py  intent_firewall.py  reconciler.py  tools.py  value_flow_engine.py
kernell_os_sdk/crypto/: passport.py
kernell_os_sdk/devlayer/: cli_dev.py
kernell_os_sdk/escrow/: manager.py
kernell_os_sdk/learning/: loop.py
kernell_os_sdk/llm/: anthropic.py  code_pipeline.py  ollama.py  openai.py  registry.py
kernell_os_sdk/marketplace/: discovery.py  simulator.py
my_first_swarm/: Dockerfile  kernell_os_sdk-1.0.0-py3-none-any.whl  main.py
requirements/: base.in  base.txt  dev.in
scripts/: baseline_openai.py  benchmark_report.py  benchmark_runner.py  check_security_gates.py  day0_boot.sh  decode_wal.py  install-shadow.sh  os_daemon.py  patch_sast.py  policy_audit_dataset.py  policy_build_dataset.py  policy_make_sft_jsonl.py  policy_train_lora.py  quality.py  quality_llm.py
src/: engine.rs  lib.rs  wal.rs
tests/: load_tester.py  test_capabilities.py  test_chaos_firecracker.py  test_data_flywheel.py  test_hardening.py  test_hybrid_fallback.py  test_policy_lite.py  test_router.py  test_runtime_abuse.py  test_scheduler.py  test_sdk.py  test_security.py  test_shadow_proxy.py
(+84 files in other folders)
