[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kernell-os-sdk"
version = "0.1.0"
description = "Kernell OS Full SDK (Meta-package). Includes both Agent SDK and Pay SDK."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Kernell OS", email = "dev@kernell.site" }
]
dependencies = [
    "kernell-agent-sdk>=0.1.0",
    "kernell-pay-sdk>=0.1.0"
]

[project.urls]
Homepage = "https://kernell.site"
Repository = "https://github.com/Greco-Italico/kernell-os-sdk"
